--- a/graph.html
+++ b/graph.html
@@ -27,5 +27,10 @@
   <body>
     <a href=/>홈으로</a>
     <div id="curve_chart" style="width: 900px; height: 500px"></div>
+    <H4>Raw Data</H4>
+    <%RAWDATA%>
+    <br>
+    Length= <%LENGTH%>
+    <p>
   </body>
 </html>
