--- a/graph.html
+++ b/graph.html
@@ -9,8 +9,8 @@
   <body>
     <a href=/>Home으로 돌아가기</a>
     <H4>지난 3초 센서데이타(3초간격 자동갱신)</H4>
-    <div style="width:800px;">
-    <canvas id="mycanvas"></canvas>
+    <div style="width:800px;height=400px">
+    <canvas id="mycanvas" width=1000px height=200px></canvas>
     </div>
 
     <H4>Raw Data</H4>
